--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "sass-loader": "^8.0.0",
         "serialize-javascript": "^5.0.1",
         "vue-template-compiler": "^2.6.12",
-        "websocket-extensions": ">=0.1.4"
+        "websocket-extensions": ">=0.1.4",
+        "ssri": ">=8.0.1",
+        "is-svg": ">=4.2.2"
     }
 }
